border bottom and overflow issue fixed

--- a/common/common.scss
+++ b/common/common.scss
@@ -274,6 +274,7 @@ html {
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Quantico', sans-serif !important;
+    overflow-x: hidden !important;
   }
 
   .background-container {
@@ -906,7 +907,7 @@ html body #main-outlet {
     flex-direction: column;
 
     .subcategory {
-      border-bottom: 1px solid rgba(179, 180, 180, 0.3);
+      border-bottom: 1px solid rgba(179, 180, 180, 0.3) !important;
       margin-bottom: 15px;
       margin-top: 10px;
       padding-bottom: 15px;
